--- a/.github/workflows/greetings.yaml
+++ b/.github/workflows/greetings.yaml
@@ -8,9 +8,11 @@ on:
 jobs:
   greeting:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/first-interaction@v1
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-message: "Message that will be displayed on users' first issue"
-          pr-message: "Message that will be displayed on users' first pr"
+      - name: Run a one-line script
+        run: echo Hello, world!
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your lambda.
